tagging changed for API endpoints
